[package]
name = "grad-parse"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
regex = "1.12.2"
thiserror = "2.0.17"

[dev-dependencies]
paste = "1.0.15"
